<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校园网登陆</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="switch_account">切换账号</string>
    <string name="login">切换并登陆账号</string>
    <string name="HintWord">使用学号登录</string>
    <string name="account">学号</string>
    <string name="password">密码</string>

</resources>
